# strawalarm

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  ROADMAP.md  install.sh  pyproject.toml
.copr/: Makefile
.github/workflows/: ci.yml  release.yml
contrib/: install-powerdevil-caps.sh  powerdevil-wakealarm-caps.path  powerdevil-wakealarm-caps.service
data/: io.github.tengro.strawalarm.metainfo.xml  strawalarm.desktop  strawalarmd.service
packaging/: strawalarm.spec
src/strawalarm/: __init__.py  bus.py  cli.py  core.py  daemon.py  filelog.py  gui.py  mpris.py  notify.py  power.py  state.py
tests/: conftest.py  test_daemon_state.py  test_filelog.py  test_parsers.py  test_preview.py  test_recurrence.py  test_sanity_checks.py  test_session.py  test_state.py
