[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strawalarm"
version = "0.9.0"
description = "Straw Alarm — sleep timer and music alarm for any MPRIS2 player (fall asleep to music, wake to a playlist; AIMP-style)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "tengro" }]
requires-python = ">=3.10"
keywords = ["mpris", "sleep-timer", "alarm", "strawberry", "music"]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
# Runtime tools (not pip-installable): playerctl, busctl (systemd).
dependencies = []

[project.optional-dependencies]
gui = ["PySide6"]
dev = ["pytest", "pytest-cov", "ruff"]

[project.scripts]
strawalarm = "strawalarm.cli:main"
strawalarm-gui = "strawalarm.gui:main"

[project.urls]
Homepage = "https://github.com/Tengro/strawalarm"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
strawalarm = ["data/*.svg"]
